# anna-dl

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DIAGRAM.md  MIGRATION.md  Makefile  NANO_BANNA.md  NANO_BANNA_PRO.md  README.md  WARP.md  annadl  config.example.json  go.mod  go.sum  main.go  main_test.go  nano_banna.mmd
config/: config.go  config_test.go
downloader/: downloader.go  downloader_test.go
scraper/: scraper.go  scraper_test.go
src/: cache.rs  config.rs  downloader.rs  main.rs  scraper.rs
src/ui/: app.rs  mod.rs
ui/: commands.go  model.go  update.go  view.go
