[package]
name = "anna-dl"
version = "0.1.0"
edition = "2021"
authors = ["anna-dl contributors"]
description = "A Rust CLI tool for downloading books from Anna's Archive with rich TUI"
repository = "https://github.com/Nquxii/anna-dl"
license = "MIT"

[[bin]]
name = "annadl"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# HTML parsing
scraper = "0.19"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal styling
# ansi_term = "0.12"
# underline = "0.4"
# colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# File operations
indicatif = "0.17"  # Progress bars
walkdir = "2.4"
dirs = "5.0"

# Browser headers
# fake_user_agent = "0.1"
rand = "0.8"
urlencoding = "2.1"
regex = "1.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
